--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,9 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "algorithm": "cpp",
+        "optional": "cpp",
+        "vector": "cpp"
     }
 }
